# spectroplot

./: .gitattributes  CONTRIBUTING.md  LICENSE  README.md  data_reader.py  functions.py  global_constants.py  pyproject.toml  spectro_plot.py  spectroplot.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: ci.yml
data/ESD/ABS/: ABS_pyrene_esd.spectrum.root1  ABS_pyrene_esd.spectrum.root10  ABS_pyrene_esd.spectrum.root11  ABS_pyrene_esd.spectrum.root12  ABS_pyrene_esd.spectrum.root13  ABS_pyrene_esd.spectrum.root14  ABS_pyrene_esd.spectrum.root15  ABS_pyrene_esd.spectrum.root16  ABS_pyrene_esd.spectrum.root17  ABS_pyrene_esd.spectrum.root18  ABS_pyrene_esd.spectrum.root19  ABS_pyrene_esd.spectrum.root2  ABS_pyrene_esd.spectrum.root20  ABS_pyrene_esd.spectrum.root3  ABS_pyrene_esd.spectrum.root4  ABS_pyrene_esd.spectrum.root5  ABS_pyrene_esd.spectrum.root6  ABS_pyrene_esd.spectrum.root7  ABS_pyrene_esd.spectrum.root8  ABS_pyrene_esd.spectrum.root9  ABS_pyrene_esd_AH.spectrum  ABS_pyrene_esd_AH_1-2-5-9-13-16-19-20.spectrum  ABS_pyrene_esd_AH_2-5-9-16-20.spectrum  (+1 more)
data/IR/: FRQ_tungsten_hexacarbonyl_f.out
data/Raman/: RAM_c60-Ih_r.out
data/TD-DFT/: ABS_c114-D3_a.out  UV_c60-Ih.out  UV_c70-D5h.out
data/VPT2/: VPT2_furan_vpt2.out
data/experimental/: C60_PL.asc  C70.asc  C90-raman.asc  C90.asc  DataC70.asc  pyrene_cyclohexane_expt.asc
data/expt_data/: C60.asc  C70_PL.asc
data/pyrene/: ABS_pyrene_esd_VG-9-16-20.spectrum  ABS_pyrene_esd_VG.spectrum  ABS_pyrene_esd_VG_2-5-16.spectrum
data/td-dft/: ABS_c114-D3h_a.out
requirements/: README.rst  requirements-development.txt  requirements-documentation.txt  requirements.txt
src/spectroplot/: __init__.py  __main__.py  _patterns.py  data_reader.py  functions.py  global_constants.py  spectroplot.py
tests/: test_data_reader.py  test_functions.py  test_integration.py
tools/: sum_spectra.py
(+12 files in other folders)
