[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectroplot"
version = "0.1.0"
description = "Plot optical spectra from ORCA output, spectrum, and ESD root files"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
spectroplot = "spectroplot:main"

[tool.setuptools.packages.find]
where = ["src"]
